docs/telepresence/2.0/quick-start/qs-go.md
---
description: "Install Telepresence and learn to use it to intercept services running in your Kubernetes cluster, speeding up local development and debugging."
---

import Alert from '@material-ui/lab/Alert';
import QSTabs from './qs-tabs'
import QSCards from './qs-cards'

<div class="docs-language-toc">

* <a href="../qs-node/" title="Node.js">Node.js</a>
* <a href="../qs-go/" title="Go" class="active">Go</a>
* <a href="../qs-java/" title="Java">Java</a>
* <a href="../qs-python/" title="Python (Flask)">Python (Flask)</a>
* <a href="../qs-python-fastapi/" title="Python (FastAPI)">Python (FastAPI)</a>

</div>

# Telepresence Quick Start - **Go**

<div class="docs-article-toc">
<h3>Contents</h3>

* [Prerequisites](#prerequisites)
* [1. Install the Telepresence CLI](#1-install-the-telepresence-cli)
* [2. Test Telepresence](#2-test-telepresence)
* [3. Install a sample Go application](#3-install-a-sample-go-application)
* [4. Set up a local development environment](#4-set-up-a-local-development-environment)
* [5. Intercept all traffic to the service](#5-intercept-all-traffic-to-the-service)
* [6. Make a code change](#6-make-a-code-change)
* [7. Create a Preview URL](#7-create-a-preview-url)
* [What's next?](#img-classos-logo-srcimageslogopng-whats-next)

</div>

## Prerequisites
You’ll need [`kubectl` installed](https://kubernetes.io/docs/tasks/tools/#kubectl)
and set up
([Linux](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/#verify-kubectl-configuration) /
 [macOS](https://kubernetes.io/docs/tasks/tools/install-kubectl-macos/#verify-kubectl-configuration) /
 [Windows](https://kubernetes.io/docs/tasks/tools/install-kubectl-windows/#verify-kubectl-configuration))
to use a Kubernetes cluster, preferably an empty test cluster.

<Alert severity="info">
    <strong>Need a cluster?</strong> We provide free demo clusters to use with this quick start, <a href="../../howtos/democluster/">quickly set one up!</a>.
</Alert>

If you have used Telepresence previously, please first reset your Telepresence deployment with:
`telepresence uninstall --everything`.

## 1. Install the Telepresence CLI

<QSTabs/>

## 2. Test Telepresence

Telepresence connects your local workstation to a remote Kubernetes cluster.

1. Connect to the cluster:
`telepresence connect`

  ```
  $ telepresence connect

    Launching Telepresence Daemon
    ...
    Connected to context default (https://<cluster-public-IP>)
  ```

  <Alert severity="info">
    macOS users: If you receive an error when running Telepresence that the developer cannot be verified, open
    <br />
    <strong>System Preferences → Security & Privacy → General</strong>.
    <br />
    Click <strong>Open Anyway</strong> at the bottom to bypass the security block. Then retry the <code>telepresence connect</code> command.
  </Alert>

2. Test that Telepresence is working properly by connecting to the Kubernetes API server:
`curl -ik https://kubernetes.default`

  <Alert severity="info">
    <strong>Didn't work?</strong> Make sure you are using Telepresence 2.0.3 or greater, check with <code>telepresence version</code> and upgrade <a href="../../howtos/upgrading/">here</a> if needed.
  </Alert>

  ```
  $ curl -ik https://kubernetes.default

    HTTP/1.1 401 Unauthorized
    Cache-Control: no-cache, private
    Content-Type: application/json
    Www-Authenticate: Basic realm="kubernetes-master"
    Date: Tue, 09 Feb 2021 23:21:51 GMT
    Content-Length: 165

    {
      "kind": "Status",
      "apiVersion": "v1",
      "metadata": {

      },
      "status": "Failure",
      "message": "Unauthorized",
      "reason": "Unauthorized",
      "code": 401
    }%

  ```
<Alert severity="info">
    The 401 response is expected.  What's important is that you were able to contact the API.
</Alert>

<Alert severity="success">
    <strong>Congratulations!</strong> You’ve just accessed your remote Kubernetes API server, as if you were on the same network! With Telepresence, you’re able to use any tool that you have locally to connect to any service in the cluster.
</Alert>

## 3. Install a sample Go application

Your local workstation may not have the compute or memory resources necessary to run all the services in a multi-service application. In this example, we’ll show you how Telepresence can give you a fast development loop, even in this situation.

<Alert severity="info">
    While Telepresence works with any language, this guide uses a sample app written in Go. We have versions in <a href="../qs-python/">Python (Flask)</a>, <a href="../qs-python-fastapi/">Python (FastAPI)</a>, <a href="../qs-java/">Java</a>, and <a href="../qs-node/">NodeJS</a> if you prefer.
</Alert>

1. Start by installing a sample application that consists of multiple services:
`kubectl apply -f https://raw.githubusercontent.com/datawire/edgey-corp-go/main/k8s-config/edgey-corp-web-app-no-mapping.yaml`

  ```
  $ kubectl apply -f https://raw.githubusercontent.com/datawire/edgey-corp-go/main/k8s-config/edgey-corp-web-app-no-mapping.yaml

    deployment.apps/dataprocessingservice created
    service/dataprocessingservice created
    ...

  ```

2. Give your cluster a few moments to deploy the sample application.

  Use `kubectl get pods` to check the status of your pods:

  ```
  $ kubectl get pods

    NAME                                         READY   STATUS    RESTARTS   AGE
    verylargedatastore-855c8b8789-z8nhs          1/1     Running   0          78s
    verylargejavaservice-7dfddbc95c-696br        1/1     Running   0          78s
    dataprocessingservice-5f6bfdcf7b-qvd27       1/1     Running   0          79s
  ```

3. Once all the pods are in a `Running` state, go to the frontend service in your browser at [http://verylargejavaservice.default:8080](http://verylargejavaservice.default:8080).

4. You should see the EdgyCorp WebApp with a <strong style="color:green">green</strong> title and <strong style="color:green">green</strong> pod in the diagram.

<Alert severity="success">
  <strong>Congratulations</strong>, you can now access services running in your cluster by name from your laptop!
</Alert>

## 4. Set up a local development environment
You will now download the repo containing the services' code and run the DataProcessingService service locally. This version of the code has the UI color set to <strong style="color:blue">blue</strong> instead of <strong style="color:green">green</strong>.

<Alert severity="info">
    Confirm first that nothing is running locally on port 3000! If <code>curl localhost:3000</code> returns <code>Connection refused</code> then you should be good to go.
</Alert>

1. Clone the web app’s GitHub repo:
`git clone https://github.com/datawire/edgey-corp-go.git`

  ```
  $ git clone https://github.com/datawire/edgey-corp-go.git

    Cloning into 'edgey-corp-go'...
    remote: Enumerating objects: 441, done.
    ...
  ```

2. Change into the repo directory, then into DataProcessingService:
`cd edgey-corp-go/DataProcessingService/`

3. You will use [Fresh](https://pkg.go.dev/github.com/BUGLAN/fresh) to support auto reloading of the Go server, which we'll use later.  Confirm it is installed by running:
  `go get github.com/pilu/fresh`
  Then start the Go server:
  `GO111MODULE=off $GOPATH/bin/fresh`

  ```
  $ go get github.com/pilu/fresh

  $ GO111MODULE=off $GOPATH/bin/fresh

    ...
    10:23:41 app | Welcome to the DataProcessingGoService!
  ```

  <Alert severity="info">
    <a href="https://golang.org/doc/install">Install Go from here</a> and <a href="https://www.digitalocean.com/community/tutorials/understanding-the-gopath">set your GOPATH</a> if needed.
  </Alert>

4. In a **new terminal window**, curl the service running locally to confirm it’s set to <strong style="color:blue">blue</strong>:
`curl localhost:3000/color`

  ```
  $ curl localhost:3000/color

    “blue”
  ```

<Alert severity="success">
    <strong>Victory</strong>, your local Go server is running a-ok!
</Alert>

## 5. Intercept all traffic to the service
Next, we’ll create an intercept. An intercept is a rule that tells Telepresence where to send traffic. In this example, we will send all traffic destined for the DataProcessingService to the version of the DataProcessingService running locally instead:

1. Start the intercept with the `intercept` command, setting the service name and port:
`telepresence intercept dataprocessingservice --port 3000`

  ```
  $ telepresence intercept dataprocessingservice --port 3000

    Using deployment dataprocessingservice
    intercepted
        State       : ACTIVE
        Destination : 127.0.0.1:3000
        Intercepting: all connections
  ```

2. Go to the frontend service again in your browser. Since the service is now intercepted it can be reached directly by its service name at [http://verylargejavaservice:8080](http://verylargejavaservice:8080). You will now see the <strong style="color:blue">blue</strong> elements in the app.

<Alert severity="success">
  The frontend’s request to DataProcessingService is being <strong>intercepted and rerouted</strong> to the Go server on your laptop!
</Alert>

## 6. Make a code change
We’ve now set up a local development environment for the DataProcessingService, and we’ve created an intercept that sends traffic in the cluster to our local environment. We can now combine these two concepts to show how we can quickly make and test changes.

1. Open `edgey-corp-go/DataProcessingService/main.go` in your editor and change `var color string` from `blue` to `orange`. Save the file and the Go server will auto reload.

2. Now, visit [http://verylargejavaservice:8080](http://verylargejavaservice:8080) again in your browser. You will now see the orange elements in the application.

<Alert severity="success">
  We’ve just shown how we can edit code locally, and <strong>immediately</strong> see these changes in the cluster.
  <br />
  Normally, this process would require a container build, push to registry, and deploy.
  <br />
  With Telepresence, these changes happen instantly.
</Alert>

## 7. Create a Preview URL
Create preview URLs to do selective intercepts, meaning only traffic coming from the preview URL will be intercepted, so you can easily share the services you’re working on with your teammates.

1. Clean up your previous intercept by removing it:
`telepresence leave dataprocessingservice`

2. Login to Ambassador Cloud, a web interface for managing and sharing preview URLs:
`telepresence login`

  This opens your browser; login with your GitHub account and choose your org.

  ```
  $ telepresence login

    Launching browser authentication flow...
    <browser opens, login with GitHub>
    Login successful.
  ```

3. Start the intercept again:
`telepresence intercept dataprocessingservice --port 3000 --mount=false`
  You will be asked for your ingress; specify the front end service: `verylargejavaservice.default`
  Then when asked for the port, type `8080`.
  Finally, type `n` for “Use TLS”.

  ```
    $ telepresence intercept dataprocessingservice --port 3000 --mount=false

      Confirm the ingress to use for preview URL access
      Ingress service.namespace ? verylargejavaservice.default
      Port ? 8080
      Use TLS y/n ? n
      Using deployment dataprocessingservice
      intercepted
          State       : ACTIVE
          Destination : 127.0.0.1:3000
          Intercepting: HTTP requests that match all of:
            header("x-telepresence-intercept-id") ~= regexp("86cb4a70-c7e1-1138-89c2-d8fed7a46cae:dataprocessingservice")
          Preview URL : https://<random-subdomain>.preview.edgestack.me
  ```

4. Wait a moment for the intercept to start; it will also output a preview URL.  Go to this URL in your browser, it will be the <strong style="color:orange">orange</strong> version of the app.

5. Now go again to [http://verylargejavaservice:8080](http://verylargejavaservice:8080), it’s still <strong style="color:green">green</strong>.

Normal traffic coming to your app gets the <strong style="color:green">green</strong> cluster service, but traffic coming from the preview URL goes to your laptop and gets the <strong style="color:orange">orange</strong> local service!

<Alert severity="success">
  The <strong>Preview URL</strong> now shows exactly what is running on your local laptop -- in a way that can be securely shared with anyone you work with.
</Alert>

## <img class="os-logo" src="../../../images/logo.png"/> What's Next?

<QSCards/>
